Download Projects/ssu_score/#P1_20142468_v1.0/소스코드/ERR/20190004/12_error.txt
../../STD_DIR/20190004/12.c: In function 'main':
../../STD_DIR/20190004/12.c:69:2: error: expected declaration or statement at end of input
  exit(0);
  ^~~~
sh: 1: ./12.stdexe: not found
